# bonsaiwm

./: .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  actions.def  bonsaiwm.1  bonsaiwm.c  bonsaiwm.d.lua  bonsaiwm.desktop  bonsaiwm.h  bonsaiwm_lua.c  bonsaiwm_lua.h  client.h  config.c  config.d.lua  config.h  config.lua  config.mk  index.md  lua.c  lua.h  meson.build  meson.options  package-lock.json  package.json  pnpm-lock.yaml  util.c  util.h
.gitea/issue_template/: bug_report.yml
.github/workflows/: build-docs.yml  publish-master-docs.yml
.vitepress/: config.mts  config.ts  versions.ts
docs/: build.md  index.md  lua-roadmap.md  lua.md
docs/default/: docs.json  index.md
docs/latest/: build.md  docs.json
docs/lua/: index.md  lua-roadmap.md  reload-semantics.md
docs/master/: configuration.md  installation.md
master/: changelog.md  roadmap.md
protocols/: meson.build
scripts/: generate-docs.ts
site/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml
site/src/: content.config.ts
site/src/content/docs/: about.mdx  changelog.mdx  index.mdx  roadmap.mdx
site/src/loaders/: docs-with-default-title.ts
site/src/plugins/: remark-relative-links.mjs
site/src/styles/: custom.css
